@@ -1,6 +1,5 @@
 package io.github.droidkaigi.confsched2017.viewmodel;
 
-import com.annimon.stream.Collectors;
 import com.annimon.stream.Stream;
 
 import android.content.Context;
@@ -14,6 +13,7 @@ import java.util.ArrayList;
 import java.util.Date;
 import java.util.LinkedHashMap;
 import java.util.List;
+import java.util.Locale;
 import java.util.Map;
 
 import javax.inject.Inject;
@@ -25,9 +25,12 @@ import io.github.droidkaigi.confsched2017.model.Session;
 import io.github.droidkaigi.confsched2017.repository.sessions.MySessionsRepository;
 import io.github.droidkaigi.confsched2017.repository.sessions.SessionsRepository;
 import io.github.droidkaigi.confsched2017.util.DateUtil;
+import io.github.droidkaigi.confsched2017.view.helper.Navigator;
 import io.reactivex.Single;
 
 public class SessionsViewModel extends BaseObservable implements ViewModel {
+
+    private final Navigator navigator;
 
     private SessionsRepository sessionsRepository;
 
@@ -38,7 +41,8 @@ public class SessionsViewModel extends BaseObservable implements ViewModel {
     private List<Date> stimes;
 
     @Inject
-    SessionsViewModel(SessionsRepository sessionsRepository, MySessionsRepository mySessionsRepository) {
+    SessionsViewModel(Navigator navigator, SessionsRepository sessionsRepository, MySessionsRepository mySessionsRepository) {
+        this.navigator = navigator;
         this.sessionsRepository = sessionsRepository;
         this.mySessionsRepository = mySessionsRepository;
     }
@@ -48,8 +52,8 @@ public class SessionsViewModel extends BaseObservable implements ViewModel {
         // Do nothing
     }
 
-    public Single<List<SessionViewModel>> getSessions(String languageId, Context context) {
-        return Single.zip(sessionsRepository.findAll(languageId),
+    public Single<List<SessionViewModel>> getSessions(Locale locale, Context context) {
+        return Single.zip(sessionsRepository.findAll(locale),
                 mySessionsRepository.findAll(),
                 (sessions, mySessions) -> {
                     final Map<Integer, MySession> mySessionMap = new LinkedHashMap<>();
@@ -65,9 +69,10 @@ public class SessionsViewModel extends BaseObservable implements ViewModel {
                     List<SessionViewModel> viewModels = Stream.of(sessions)
                             .map(session -> {
                                 boolean isMySession = mySessionMap.containsKey(session.id);
-                                return new SessionViewModel(session, context, rooms.size(), isMySession);
+                                return new SessionViewModel(
+                                        session, context, navigator, rooms.size(), isMySession, mySessionsRepository);
                             })
-                            .collect(Collectors.toList());
+                            .toList();
                     return adjustViewModels(viewModels, context);
                 });
     }
@@ -145,7 +150,7 @@ public class SessionsViewModel extends BaseObservable implements ViewModel {
                 .map(session -> session.stime)
                 .sorted()
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Room> extractRooms(List<Session> sessions) {
@@ -154,7 +159,7 @@ public class SessionsViewModel extends BaseObservable implements ViewModel {
                 .filter(room -> room != null && room.id != 0)
                 .sorted((lhs, rhs) -> lhs.name.compareTo(rhs.name))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public List<Room> getRooms() {
